# ReportGeneratorNext

./: LICENSE  README.md  init.json  package-lock.json  package.json  tree.
.github/workflows/: build.yml  ci.yml
app/: layout.tsx  page.tsx
components/: app-settings.tsx  app-sidebar.tsx  config-management.tsx  report-form.tsx  report-list.tsx  vuln-db-form.tsx
components/ui/: combobox.tsx  creatable-combobox.tsx  switch.tsx
contexts/: NavigationContext.tsx  ReportContext.tsx
hooks/: useSettings.ts  useVulnDB.ts
lib/: config.ts  demo.ts  types.ts  vuln_data.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/report/: img_util.rs  mod.rs
