[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.87"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
thiserror = "2.0.12"
tauri = { version = "2.5.1", features = [] }
tauri-plugin-store = "2.2.0"
tauri-plugin-fs = "2.3.0"
tauri-plugin-dialog = "2.2.2"
docx-rs = "0.4.17"
tauri-plugin-persisted-scope = "2.2.2"
tauri-plugin-clipboard = "2.1.11"
tokio = { version = "1.0", features = ["process", "time"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.2.4"
tauri-plugin-window-state = "2.2.2"
